sg.tf
#### Sg group

resource "aws_security_group" "Jenkins_sg_group" {
  name   = "Jenkins_sg_group"
  vpc_id = data.aws_vpc.default.id
  description = "Allow ssh , jenkins, Nginx"

  ingress {

    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  ingress {

    description = "jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }
  ingress {

    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }
  
  egress {
    description = "all traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] 

  }

  tags = {

    Name = "Jenkins_sg_group"
  }

}
